--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">DevOps Verse</string>
+    <string name="mobile_number">Enter you mobile number</string>  <!-- Name of the App Can be changed from here  -->
 </resources>
